kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: code-server-$IMAGE_NAME_REPLACED-$CATALOG_INFO_IDX-$EMPLOYEE_NUMBER
  namespace: $PROJECT_NAME-$EMPLOYEE_NUMBER
spec:
  type: NodePort 
  ports:
    # $PROTOCOL: TCP / UDP
    # $PORT_NAME: app1 ...
    # $PORT_NUMBER: 80, 8080, 9090 ...
  - protocol: TCP
    name: code-server
    port: 80
    targetPort: 80
  - protocol: TCP
    name: app1
    port: 9090
    targetPort: 9090
  selector:
      app: code-server-$IMAGE_NAME_REPLACED-$CATALOG_INFO_IDX-$EMPLOYEE_NUMBER
