kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: code-server-$IMAGE_NAME_REPLACED-$CATALOG_INFO_IDX-$EMPLOYEE_NUMBER
  namespace: $PROJECT_NAME-$EMPLOYEE_NUMBER
  annotations:
      nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  # DOMAIN = 사번 + 이미지명 + 프로젝트명 + PORT-SEQ의 해시값
  - host: $DOMAIN.code-server.kbonecloud.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: code-server-$IMAGE_NAME_REPLACED-$CATALOG_INFO_IDX-$EMPLOYEE_NUMBER
            port:
                number: 80

  # 추가 포트가 있는 경우
  - host: $DOMAIN.code-server.kbonecloud.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: code-server-$IMAGE_NAME_REPLACED-$CATALOG_INFO_IDX-$EMPLOYEE_NUMBER
            port:
              number: 9090
